--- a/src/app/pages/settings/force-update-apps/force-update-apps.component.html
+++ b/src/app/pages/settings/force-update-apps/force-update-apps.component.html
@@ -4,9 +4,9 @@
 
   </page-content-header>
   <!-- / HEADER -->
-  <div class="content p-24">
-    <form [formGroup]="formForceUpdate" autocomplete="off">
-      <div class="ayo-main-wrapper mat-bg-white is-half">
+  <div class="content p-24" *ngIf="!onLoad">
+    <div fxLayout="row wrap" fxLayoutAlign="start start" fxLayout.gt-md="row">
+      <form [formGroup]="formForceUpdate" autocomplete="off" class="mat-elevation-z4 mr-24 mb-24 p-24" fxLayout="column" fxLayoutAlign="start" fxFlex="65%">
         <div fxLayout="row" class="pb-16" fxLayoutAlign="start center">
           <h2 class="">Pemberitahuan Pembaruan Aplikasi</h2>
         </div>
@@ -24,19 +24,22 @@
           </div>
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <mat-select placeholder="Operation System" formControlName="os">
+              <mat-select placeholder="Operasi Sistem" formControlName="os">
                 <mat-option *ngFor="let item of listOs" [value]="item.value">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formForceUpdate.controls['os'].hasError('required') && formForceUpdate.controls['os'].touched">
-                Operation System harus diisi
+                Operasi Sistem harus diisi
               </mat-error>
             </mat-form-field>
           </div>
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" formControlName="version" placeholder="Versi Aplikasi">
+              <input matInput type="text" formControlName="version" placeholder="Versi Aplikasi" decimalNumber>
               <mat-error *ngIf="formForceUpdate.controls['version'].hasError('required') && formForceUpdate.controls['version'].touched">
                 Versi Aplikasi harus diisi
+              </mat-error>
+              <mat-error *ngIf="formForceUpdate.controls['version'].hasError('min') && formForceUpdate.controls['version'].touched">
+                Versi Aplikasi {{formForceUpdate.controls['appsName'].value}} tidak boleh kurang dari versi aplikasi {{formForceUpdate.controls['appsName'].value}} yang terakhir
               </mat-error>
             </mat-form-field>
           </div>
@@ -98,13 +101,58 @@
             </mat-radio-group>
           </div>
         </div>
-        <div class="confirm pt-8 pb-24" fxLayout="row">
+        <div class="confirm pt-8 pb-24" fxLayout="row" *ngIf="permission?.buat">
           <button mat-raised-button type="password" type="button" class="confirmation-button" fxFlex="30" (click)="submit()">
             SIMPAN
           </button>
         </div>
+      </form>
+      <div fxLayout="column" fxFlex="32%">
+        <div class="ayo-main-wrapper mat-bg-white" fxFlex="1 0 auto">
+          <div fxLayout="row" class="py-16" fxLayoutAlign="start center">
+            <h2 class="">Versi Aplikasi Consumer Terakhir</h2>
+          </div>
+          <div class="profile-box info-box work" fxLayout="column" *ngFor="let item of listVersionConsumer">
+            <div class="info-line pb-16">
+              <small class="secondary-text">Versi Aplikasi</small>
+              <div class="info" fxLayout="row" fxLayoutAlign="space-between center">
+                {{item.version}}
+                <!-- <mat-icon class="secondary-text" color="primary">delete_forever</mat-icon> -->
+                <button mat-icon-button color="primary" matTooltip="Hapus" (click)="revertVersion(item)" *ngIf="permission?.hapus">
+                  <mat-icon>delete_forever</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="profile-box info-box work" fxLayout="column" *ngIf="listVersionConsumer.length === 0">
+            <div class="info-line pb-16">
+              <small class="secondary-text">Tidak ada data</small>
+            </div>
+          </div>
+        </div>
+        <div class="ayo-main-wrapper mat-bg-white mt-24" fxFlex="1 0 auto">
+          <div fxLayout="row" class="py-16" fxLayoutAlign="start center">
+            <h2 class="">Versi Aplikasi Retailer Terakhir</h2>
+          </div>
+          <div class="profile-box info-box work" fxLayout="column" *ngFor="let item of listVersionRetailer">
+            <div class="info-line pb-16">
+              <small class="secondary-text">Versi Aplikasi</small>
+              <div class="info" fxLayout="row" fxLayoutAlign="space-between center">
+                {{item.version}}
+                <button mat-icon-button color="primary" matTooltip="Hapus" (click)="revertVersion(item)" *ngIf="permission?.hapus">
+                  <mat-icon>delete_forever</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="profile-box info-box work" fxLayout="column" *ngIf="listVersionRetailer.length === 0">
+            <div class="info-line pb-16">
+              <small class="secondary-text">Tidak ada data</small>
+            </div>
+          </div>
+        </div>
       </div>
-    </form>
+    </div>
   </div>
 </div>
   
