--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -86,7 +86,7 @@
 
         <ngx-datatable-column [sortable]="false" name="Audience / Grup" prop="audience_name"></ngx-datatable-column>
 
-        <ngx-datatable-column [sortable]="false" name="Status" prop="status_scheduler">
+        <ngx-datatable-column [width]="75" [sortable]="false" name="Status" prop="status_scheduler">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p class="status text-truncate h6 p-4" style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
@@ -97,18 +97,21 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="128" name="Tindakan" headerClass="textright" [sortable]="false">
+        <ngx-datatable-column [width]="165" name="Tindakan" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="button-row" style="margin-left: -10px">
-              <button mat-icon-button color="" matTooltip="Lihat" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">
+              <button type="button" mat-icon-button color="" matTooltip="Lihat" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">
                 <mat-icon class="secondary-text">assignment</mat-icon>
               </button>
-              <button mat-icon-button color="" [disabled]="row.status_audience !== 'approved'" matTooltip="Eksport Trade Program"
+              <button type="button" mat-icon-button color="" [routerLink]="['/dte', 'schedule-trade-program', 'edit', row.id]" [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah" matTooltip="Ubah Tanggal Penjadwalan">
+                <mat-icon class="secondary-text">update</mat-icon>
+              </button>
+              <button type="button" mat-icon-button color="" [disabled]="row.status_audience !== 'approved'" matTooltip="Eksport Trade Program"
                 (click)="export(row.id)">
                 <mat-icon *ngIf="row.status_audience === 'approved'" class="orange-500-fg">save_alt</mat-icon>
                 <mat-icon *ngIf="row.status_audience !== 'approved'" class="secondary-text">save_alt</mat-icon>
               </button>
-              <button mat-icon-button color="primary" [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
+              <button type="button" mat-icon-button color="primary" [disabled]="row.status_scheduler === 'publish' || !permission?.hapus" matTooltip="Hapus"
                 (click)="deleteStp(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
