--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -109,14 +109,14 @@
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Kode Agen" prop="code" summary-template="activeCell"></ngx-datatable-column>
-        <ngx-datatable-column name="Classification" prop="classification" summary-template="activeCell"></ngx-datatable-column>
+        <ngx-datatable-column [width]="60" name="Classification" prop="classification" summary-template="activeCell"></ngx-datatable-column>
 
         <ngx-datatable-column [width]="100" name="Status" prop="active_status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
-              <p class="status text-truncate h6 p-4" style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
+              <p class="status text-truncate h6 p-4 status-order"
                 [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                {{ row.status }}
+                {{ row.status_indo.toUpperCase() }}
               </p>
             </div>
           </ng-template>
