--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -108,10 +108,16 @@
           </ng-template> -->
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Kode Agen" prop="code" summary-template="activeCell"></ngx-datatable-column>
-        <ngx-datatable-column [width]="60" name="Classification" prop="classification" summary-template="activeCell"></ngx-datatable-column>
+        <ngx-datatable-column [width]="100" name="Kode Agen" prop="code" summary-template="activeCell"></ngx-datatable-column>
+        <ngx-datatable-column name="Nama Toko" prop="wholesaler_name" summary-template="activeCell">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.wholesaler_name || '-'}}</ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column [width]="100" name="Kode Toko" prop="wholesaler_code" summary-template="activeCell">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.wholesaler_code || '-'}}</ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column [width]="100" name="Classification" prop="classification" summary-template="activeCell"></ngx-datatable-column>
 
-        <ngx-datatable-column [width]="100" name="Status" prop="active_status">
+        <ngx-datatable-column [width]="120" name="Status" prop="active_status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p class="status text-truncate h6 p-4 status-order"
