publish/unpublish trade program & sorting index desc

--- a/src/app/pages/content-management/tnc/index/tnc-index.component.html
+++ b/src/app/pages/content-management/tnc/index/tnc-index.component.html
@@ -22,7 +22,7 @@
       <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
         [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
-        (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'title', dir: 'asc'}]" (select)="onSelect($event)">
+        (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)">
 
         <ngx-datatable-column [width]="200" name="Judul Syarat & Ketentuan" prop="title">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
