--- a/src/app/pages/user-management/admin-principal/index/admin-principal-index.component.html
+++ b/src/app/pages/user-management/admin-principal/index/admin-principal-index.component.html
@@ -27,7 +27,7 @@
       <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
         [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
-        [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'fullname', dir: 'asc'}]"
+        [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)"
         (select)="onSelect($event)">
 
         <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
@@ -58,7 +58,7 @@
 
         <ngx-datatable-column name="Terakhir Diubah" prop="updated_at">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.updated_at | date:'dd/MM/yyyy'}} by {{row?.updated_by_name || '-' | toCapitalize }}
+            {{row.updated_at | date:'dd/MM/yyyy HH:mm'}} {{row?.updated_by_name ? 'by ' + (row?.updated_by_name | toCapitalize) : '' }}
           </ng-template>
         </ngx-datatable-column>
 
