--- a/src/app/pages/newsfeed-management/category/index/category-index.component.html
+++ b/src/app/pages/newsfeed-management/category/index/category-index.component.html
@@ -25,7 +25,7 @@
         <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows" [loadingIndicator]="loadingIndicator"
           [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
           [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
-          [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]">
+          [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
   
           <ngx-datatable-column name="Kategori" [width]="240" prop="name">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
