wording welcome page

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -67,33 +67,33 @@
 
   <div class="lgn-container text-container" fxShow fxHide.lt-md="true" fxHide.lg="false">
     <h2>Selamat datang di</h2>
-    <h1>Sampoerna AYO</h1>
+    <h1>AYO SRC SAMPOERNA</h1>
 
-    <div class="txt-ayo">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </div>
+    <div class="txt-ayo">Satu pintu untuk manajemen internal seluruh platform AYO SRC </div>
 
     <div fxLayout="column">
       <div fxLayout="row" fxLayoutAlign="start center">
         <div fxFlex="10">
           <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
         </div>
-        <div fxFlex="70">
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div fxFlex="90">
+          <p>Kelola data pengguna platform AYO SRC</p>
         </div>
       </div>
       <div fxLayout="row" fxLayoutAlign="start center">
         <div fxFlex="10">
           <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
         </div>
-        <div fxFlex="70">
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div fxFlex="90">
+          <p>Buat dan bagikan misi kepada SRC sesuai trade program berjalan</p>
         </div>
       </div>
       <div fxLayout="row" fxLayoutAlign="start center">
         <div fxFlex="10">
           <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
         </div>
-        <div fxFlex="70">
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div fxFlex="90">
+          <p>Sebarkan spanduk online dan notifikasi kepada retailer maupun konsumen</p>
         </div>
       </div>
     </div>
